@@ -8,6 +8,8 @@
 	1475 Equestrian's Spear:	NEED INFO.
 	13005 Angelic Wing Dagger:	NEED INFO.
 =======================
+2010/11/14
+	* Rev. 14463 Updated quest and item DBs with Eden Group information. [L0ne_W0lf]
 2010/11/10
 	* Rev. 14458 Added some items with enforced delays to the item_delay_db! [L0ne_W0lf]
 2010/11/02
